--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
+    "connect-mongo": "^2.0.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "mongoose": "^5.3.13",
     "morgan": "^1.9.1",
     "nunjucks": "^3.1.4",
     "react": "^16.6.3",
@@ -41,6 +44,7 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "jest": "^23.6.0",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
     "redux-devtools-extension": "^2.13.5",
