--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/donthedeveloper/site-builder#readme",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "connect-mongo": "^2.0.2",
@@ -30,6 +31,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.3.13",
+    "mongoose-validator": "^2.1.0",
     "morgan": "^1.9.1",
     "nunjucks": "^3.1.4",
     "react": "^16.6.3",
