--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.3.13",
+    "mongoose-unique-validator": "^2.0.2",
     "mongoose-validator": "^2.1.0",
     "morgan": "^1.9.1",
     "nunjucks": "^3.1.4",
