--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "sass-watch": "./node_modules/node-sass/bin/node-sass --watch --recursive browser/src/sass --output browser/public/css",
     "start": "node app.js",
     "start-dev": "./node_modules/nodemon/bin/nodemon.js server.js",
-    "test": "test",
+    "test-server": "NODE_ENV=test jest --config ./server/jest.config.js",
+    "test": "jest",
     "webpack-watch": "./node_modules/webpack/bin/webpack.js -w"
   },
   "repository": {
@@ -37,20 +38,30 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "superagent": "^4.0.0",
-    "supertest": "^3.3.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
+    "@babel/plugin-transform-async-to-generator": "^7.1.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.0-beta.6",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "jest": "^23.6.0",
+    "jest-webpack": "^0.5.1",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
+    "regenerator-runtime": "^0.13.1",
+    "superagent": "^4.0.0",
+    "supertest": "^3.3.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
   }
