--- a/package.json
+++ b/package.json
@@ -49,10 +49,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.0-beta.6",
+    "babel-loader": "^8.0.4",
     "babel-preset-env": "^1.7.0",
     "jest": "^23.6.0",
     "jest-webpack": "^0.5.1",
