--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "jest": "^23.6.0",
     "node-sass": "^4.10.0",
