--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongoose-validator": "^2.1.0",
     "morgan": "^1.9.1",
     "nunjucks": "^3.1.4",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
