--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev-windows": "npm install && npm run sass && npm run watch-windows",
     "sass": "node-sass --recursive browser/src/sass --output browser/public/css",
     "sass-watch": "node-sass --watch --recursive browser/src/sass --output browser/public/css",
-    "start": "node app.js",
-    "start-dev": "nodemon app.js --ignore ./browser/src --ignore ./browser/public",
+    "start": "node server.js",
+    "start-dev": "nodemon server.js --ignore ./browser/src --ignore ./browser/public",
     "test": "NODE_ENV=test jest --config ./server/jest.config.js",
     "watch-mac": "npm run sass-watch & npm run webpack-watch & npm run start-dev",
     "watch-windows": "start /B npm run sass-watch & start /B npm run webpack-watch & start /B npm run start-dev",
