--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "konva": "^2.6.0",
     "mongoose": "^5.3.13",
     "mongoose-unique-validator": "^2.0.2",
     "mongoose-validator": "^2.1.0",
@@ -43,6 +44,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-konva": "^16.7.1",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
