added Lifecycle scripts included in site-builder:   start     node server.js   test     NODE_ENV=test jest --config ./server/jest.config.js
available via `npm run-script`:
  browser-sync
    browser-sync start --proxy localhost:3000 --port 3001 --files ./browser/public
  dev-mac
    npm install && npm run sass && npm run watch-mac
  dev-windows
    npm install && npm run sass && npm run watch-windows
  sass
    node-sass --recursive browser/src/sass --output browser/public/css
  sass-watch
    node-sass --watch --recursive browser/src/sass --output browser/public/css
  start-dev
    nodemon server.js --ignore ./browser/src --ignore ./browser/public
  watch-mac
    npm run sass-watch & npm run webpack-watch & npm run start-dev & npm run browser-sync
  watch-windows
    start /B npm run sass-watch & start /B npm run webpack-watch & start /B npm run start-dev & start /B npm run browser-sync
  webpack
    webpack
  webpack-watch
    webpack -w in front of browser-sync.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node server.js",
     "start-dev": "nodemon server.js --ignore ./browser/src --ignore ./browser/public",
     "test": "NODE_ENV=test jest --config ./server/jest.config.js",
-    "watch-mac": "npm run sass-watch & npm run webpack-watch & npm run start-dev & browser-sync",
+    "watch-mac": "npm run sass-watch & npm run webpack-watch & npm run start-dev & npm run browser-sync",
     "watch-windows": "start /B npm run sass-watch & start /B npm run webpack-watch & start /B npm run start-dev & start /B npm run browser-sync",
     "webpack": "webpack",
     "webpack-watch": "webpack -w"
