--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/donthedeveloper/site-builder#readme",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
@@ -39,6 +40,7 @@
     "mongoose-unique-validator": "^2.0.2",
     "mongoose-validator": "^2.1.0",
     "morgan": "^1.9.1",
+    "nodemailer": "^5.1.1",
     "nunjucks": "^3.1.4",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
