--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "main": "server.js",
   "scripts": {
     "dev-mac": "npm install && npm run sass && npm run watch-mac",
-    "dev-windows": "npm install && npm run sass && npm run watch-windows",
-    "sass": "node-sass --recursive browser/src/sass --output browser/public/css",
-    "sass-watch": "node-sass --watch --recursive browser/src/sass --output browser/public/css",
+    "dev-windows": "npm install && npm run watch-windows",
     "start": "node server.js",
     "start-dev": "nodemon server.js --ignore ./browser/src --ignore ./browser/public",
     "test": "NODE_ENV=test jest --config ./server/jest.config.js",
     "watch-mac": "npm run sass-watch & npm run webpack-watch & npm run start-dev",
-    "watch-windows": "start /B npm run sass-watch & start /B npm run webpack-watch & start /B npm run start-dev",
+    "watch-windows": "start /B npm run webpack-watch & start /B npm run start-dev & npm run webpack-dev-server",
     "webpack": "webpack",
+    "webpack-dev-server": "webpack-dev-server --open",
     "webpack-watch": "webpack -w"
   },
   "repository": {
@@ -50,21 +49,25 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
-    "@babel/polyfill": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^2.1.0",
     "jest": "^23.6.0",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "regenerator-runtime": "^0.13.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "superagent": "^4.0.0",
     "supertest": "^3.3.0",
     "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.14"
   }
 }
