--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "webpack": "webpack",
     "webpack-watch": "webpack -w"
   },
+  "pre-commit": [
+    "eslint",
+    "stylelint"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/donthedeveloper/site-builder.git"
@@ -50,18 +54,26 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
-    "@babel/polyfill": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "jest": "^23.6.0",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "regenerator-runtime": "^0.13.1",
+    "stylelint": "^9.10.1",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-scss": "^3.5.3",
     "superagent": "^4.0.0",
     "supertest": "^3.3.0",
     "webpack": "^4.25.1",
