--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev-mac": "npm install && npm run sass && npm run watch-mac",
     "dev-windows": "npm install && npm run sass && npm run watch-windows",
+    "eslint": "eslint *.js",
     "sass": "node-sass --recursive browser/src/sass --output browser/public/css",
     "sass-watch": "node-sass --watch --recursive browser/src/sass --output browser/public/css",
     "start": "node server.js",
     "start-dev": "nodemon server.js --ignore ./browser/src --ignore ./browser/public",
+    "stylelint": "stylelint browser/src/**/*.scss",
     "test": "NODE_ENV=test jest --config ./server/jest.config.js",
     "watch-mac": "npm run sass-watch & npm run webpack-watch & npm run start-dev",
     "watch-windows": "start /B npm run sass-watch & start /B npm run webpack-watch & start /B npm run start-dev",
@@ -68,6 +70,7 @@
     "jest": "^23.6.0",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
+    "pre-commit": "^1.2.2",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "regenerator-runtime": "^0.13.1",
