Removed template rendering, added index.html, add htmlwebpackplugin.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "node server.js",
     "start-dev": "nodemon server.js --ignore ./browser/src --ignore ./browser/public",
     "test": "NODE_ENV=test jest --config ./server/jest.config.js",
-    "watch-mac": "npm run sass-watch & npm run webpack-watch & npm run start-dev",
-    "watch-windows": "start /B npm run webpack-watch & start /B npm run start-dev & npm run webpack-dev-server",
+    "watch-mac": "npm run start-dev & npm run webpack-dev-server",
+    "watch-windows": "start /B npm run start-dev & start /B npm run webpack-dev-server",
     "webpack": "webpack",
     "webpack-dev-server": "webpack-dev-server --open",
     "webpack-watch": "webpack -w"
@@ -56,6 +56,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
