--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev-mac": "npm install && npm run sass && npm run watch-mac",
+    "dev-mac": "npm install && npm run watch-mac",
     "dev-windows": "npm install && npm run watch-windows",
     "start": "node server.js",
     "start-dev": "nodemon server.js --ignore ./browser/src --ignore ./browser/public",
@@ -55,6 +55,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
