--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
