Fixed ESLint CLI.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,17 @@
 {
   "extends": "airbnb",
   "rules": {
-    "linebreak-style": "off"
+    "linebreak-style": "off",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    ],
+    "no-underscore-dangle": "off"
   },
   "parser": "babel-eslint"
 }
