Fixed all ESLint errors and warnings.

--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
@@ -69,14 +71,13 @@
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "jest": "^23.6.0",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
     "pre-commit": "^1.2.2",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-logger": "^3.0.6",
     "regenerator-runtime": "^0.13.1",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended": "^2.1.0",
