--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,8 @@
     ],
     "no-underscore-dangle": "off"
   },
-  "parser": "babel-eslint"
+  "parser": "babel-eslint",
+  "env": {
+    "browser": true
+  }
 }
