--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,8 +1,11 @@
 {
-    "plugins": [
-        "stylelint-scss"
-    ],
-    "extends": [
-        "stylelint-config-recommended"
-    ]
-} 
+  "plugins": [
+    "stylelint-scss"
+  ],
+  "extends": [
+    "stylelint-config-recommended"
+  ],
+  "ignoreFiles": [
+    "./browser/src/sass/base/_normalize.scss"
+  ]
+}
