Added Forgot pass react component, custom error, and login link.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,16 @@
   ],
   "rules": {
     "linebreak-style": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    ]
   },
   "parser": "babel-eslint"
 }
