added shared webpack config between dev and prod

--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "webpack": "^4.29.6"
+    "webpack": "^4.29.6",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
