--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "npm run build && NODE_ENV=test jest --config ./server/jest.config.js",
     "watch": "npm run start-dev & npm run webpack-dev-server",
     "watch-windows": "start /B npm run start-dev & start /B npm run webpack-dev-server",
-    "test-windows": "npm run webpack && set NODE_ENV=test && jest --config ./server/jest.config.js",
+    "test-windows": "npm run build && set NODE_ENV=test && jest --config ./server/jest.config.js",
     "webpack-dev-server": "webpack-dev-server --open --config webpack.dev.js",
     "webpack-watch": "webpack -w"
   },
