Added Eslint ignore rule for 'next()'.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,13 @@
         ]
       }
     ],
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "next"
+      }
+    ]
   },
   "parser": "babel-eslint",
   "env": {
